--- a/test/test-applications/Directory.Build.props
+++ b/test/test-applications/Directory.Build.props
@@ -38,7 +38,7 @@
   </ItemGroup>
 
   <Target Name="AfterBuildCopyManagedProfiler" AfterTargets="AfterBuild" 
-          Condition=" '$(ExcludeManagedProfiler)' != 'true' AND $(LoadManagedProfilerFromProfilerDirectory)' == 'true'">
+          Condition=" '$(ExcludeManagedProfiler)' != 'true' AND '$(LoadManagedProfilerFromProfilerDirectory)' == 'true'">
     <ItemGroup>
       <!-- Subfolders of the output directory should each be a target framework -->
       <ManagedProfilerFiles Include="$(ManagedProfilerOutputDirectory)\**\*.dll" Exclude="$(ManagedProfilerOutputDirectory)\*\runtimes\**\*.dll" />
