--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -116,6 +116,10 @@ jobs:
       containerregistrytype: Container Registry
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) -e publishTargetFramework=$(publishTargetFramework) IntegrationTests
 
+  - publish: dotnet-tracer-native.log
+    artifact: profiler-logs
+    condition: succeededOrFailed()
+
   - task: PublishTestResults@2
     displayName: publish test results
     inputs:
