--- a/test/test-applications/integrations/Samples.MySql/Samples.MySql.csproj
+++ b/test/test-applications/integrations/Samples.MySql/Samples.MySql.csproj
@@ -4,6 +4,9 @@
     <ApiVersion Condition="'$(ApiVersion)' == ''">8.0.17</ApiVersion>
     <!-- Required to build multiple projects with the same Configuration|Platform -->
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+
+    <LoadManagedProfilerFromProfilerDirectory>true</LoadManagedProfilerFromProfilerDirectory>
   </PropertyGroup>
 
   <ItemGroup>
