--- a/samples/AutomaticTraceIdInjection/Log4NetExample/Properties/launchSettings.json
+++ b/samples/AutomaticTraceIdInjection/Log4NetExample/Properties/launchSettings.json
@@ -4,8 +4,9 @@
       "commandName": "Project",
       "environmentVariables": {
         "DD_LOGS_INJECTION": "true",
-        "DD_VERSION": "1.0.0",
-        "DD_ENV": "dev"
+        "DD_ENV": "dev",
+        "DD_SERVICE": "Log4NetExample",
+        "DD_VERSION": "1.0.0"
       }
     }
   }
