--- a/.azure-pipelines/benchmarks.yml
+++ b/.azure-pipelines/benchmarks.yml
@@ -1,17 +1,5 @@
-trigger:
-  branches:
-    include:
-      - master
-      - refs/tags/*
-
-schedules:
-- cron: "0 3 * * *"
-  displayName: Daily 3am (UTC) build
-  branches:
-    include:
-    - master
-    - /benchmarks/*
-  always: true
+trigger: none
+pr: none
 
 variables:
   buildConfiguration: release
@@ -34,11 +22,11 @@ stages:
 - stage: build
   jobs:
 
-  #### Windows 
+  #### Windows
 
   - job: Windows
     pool: Benchmarks
-    
+
     workspace:
       clean: all
 
