--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -2,6 +2,7 @@ trigger:
   branches:
     include:
       - master
+      - release/*
   paths:
     exclude:
       - docs/*
@@ -68,7 +69,7 @@ jobs:
       zipAfterPublish: false
       projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
       arguments: --configuration $(buildConfiguration) --framework netcoreapp3.1 --output $(publishOutput)/netcoreapp3.1
-      
+
   - task: DockerCompose@0
     displayName: docker-compose run Profiler
     inputs:
@@ -91,7 +92,7 @@ jobs:
         publishTargetFramework: netcoreapp3.1
       net5_0:
         publishTargetFramework: net5.0
-        
+
   variables:
     TestAllPackageVersions: true
 
@@ -290,7 +291,7 @@ jobs:
       packageType: sdk
       version: $(dotnetCoreSdk5Version)
       includePreviewVersions: true
-      
+
   - task: NuGetToolInstaller@1
     displayName: install nuget
 
@@ -362,7 +363,7 @@ jobs:
       containerregistrytype: Container Registry
       dockerComposeCommand: down
     condition: succeededOrFailed()
-    
+
 - job: Windows_IIS
   timeoutInMinutes: 100
   strategy:
