--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -1,17 +1,26 @@
 trigger:
   branches:
     include:
-      - master # Only run on master for now
+      - master
+      - release/*
+      - refs/tags/*
     exclude:
       - refs/pull/*/head
   paths:
     exclude:
       - docs/*
       - .github/*
-pr:
-  branches:
-    exclude: # Don't run PR validation for now
-    - '*'
+
+
+schedules:
+  - cron: "0 3 * * *"
+    displayName: Daily 3am (UTC) build
+    branches:
+      include:
+        - master
+        - release/*
+        - /benchmarks/*
+    always: true
 
 # Global variables
 variables:
@@ -839,11 +848,11 @@ stages:
   dependsOn: build
   jobs:
 
-  #### Windows 
+  #### Windows
 
   - job: Windows
     pool: Benchmarks
-    
+
     workspace:
       clean: all
 
@@ -1144,7 +1153,7 @@ stages:
 
   - job: Linux
     pool: Throughput
-    
+
     workspace:
       clean: all
 
