--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -37,6 +37,7 @@ variables:
   # For scheduled builds, only run benchmarks and crank (and deps).
   # Allow forcing a benchmark/throughput run using run_benchmarks_only=true
   benchmarksOnly: ${{ or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['run_benchmarks_only'], 'true')) }} # only works if you have a main branch
+  performComprehensiveTesting: ${{ eq(variables['perform_comprehensive_testing'], 'true') }}
 
 # Declare the datadog agent as a resource to be used as a pipeline service
 resources:
@@ -518,12 +519,14 @@ stages:
 
     - task: DockerCompose@0
       displayName: docker-compose run NukeIntegrationTests
+      ${{ if eq(variables['performComprehensiveTesting'], 'True') }}:
+        timeoutInMinutes: 360
       inputs:
         containerregistrytype: Container Registry
         dockerComposeFileArgs: |
           baseImage=$(baseImage)
           framework=$(publishTargetFramework)
-        dockerComposeCommand: run --rm -e baseImage=$(baseImage) -e framework=$(publishTargetFramework) $(dockerComposeTask)
+        dockerComposeCommand: run --rm -e baseImage=$(baseImage) -e framework=$(publishTargetFramework) -e PerformComprehensiveTesting=$(performComprehensiveTesting) $(dockerComposeTask)
 
     - task: DockerCompose@0
       displayName: docker-compose stop services
