--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -503,7 +503,7 @@ stages:
       parameters:
         build: true
         baseImage: $(baseImage)
-        command: "BuildLinuxIntegrationTests --framework $(publishTargetFramework)"
+        command: "BuildLinuxIntegrationTests --framework $(publishTargetFramework) -PerformComprehensiveTesting $(performComprehensiveTesting)"
 
     - task: DockerCompose@0
       displayName: docker-compose build NukeIntegrationTests
